# rsk-core

./: .gitignore  .integrity-report.json  CLAUDE.md  Cargo.toml  LICENSE  README.md  e2e_registry.json  run-e2e.sh  skills_registry.json
rsk/: Cargo.toml  README.md  SESSION_HANDOFF.md  YAML_PROFILING_REPORT.md  clinical_efficacy_test.py  config-wiring.yaml  e2e_registry_rust.json  profile_results.json  pyproject.toml  rsk_skill_ecosystem_architecture_spec.md  rsk_skill_ecosystem_dependencies.csv  rsk_skill_ecosystem_sequence.mermaid  rsk_skill_ecosystem_wireframe.jsx
rsk-mcp/: Cargo.toml
rsk-mcp/src/: lib.rs  main.rs  params.rs  server.rs
rsk/.github/workflows/: ci.yml  rust.yml
rsk/benches/: execution_engine.rs  levenshtein.rs  math.rs  yaml_parsers.rs
rsk/chains/: adr-severity-escalation.yaml  algo-drift-response.yaml  anti-vector-pipeline.yaml  ats-resume-screening.yaml  autopilot-pharma-monitor.yaml  batch-and-smart-goals.yaml  benefit-risk-assessment.yaml  bms-decision-loop.yaml  bradford-hill-evidence.yaml  bradford-hill-multi-criterion.yaml  campion-signal-theory.yaml  case-assessment-pipeline.yaml  caso-clinico-espanol.yaml  comms-transmit-pipeline.yaml  confidence-deadline.yaml  crypto-health-pipeline.yaml  crystalbook-diagnostic.yaml  dna-ml-pipeline.yaml  dose-response-to-action.yaml  drug-albuterol-pipeline.yaml  drug-alendronate-pipeline.yaml  drug-allopurinol-pipeline.yaml  drug-alprazolam-pipeline.yaml  drug-amitriptyline-pipeline.yaml  drug-amphetamine-pipeline.yaml  drug-anastrozole-pipeline.yaml  drug-apixaban-pipeline.yaml  drug-aripiprazole-pipeline.yaml  drug-aspirin-pipeline.yaml  drug-atenolol-pipeline.yaml  drug-atomoxetine-pipeline.yaml  drug-baclofen-pipeline.yaml  drug-benazepril-pipeline.yaml  drug-bupropion-pipeline.yaml  drug-buspirone-pipeline.yaml  drug-carbidopa-levodopa-pipeline.yaml  drug-carvedilol-pipeline.yaml  drug-cefdinir-pipeline.yaml  drug-celecoxib-pipeline.yaml  drug-cephalexin-pipeline.yaml  (+160 more)
rsk/heligrams/: ab-charge-imbalance-forged.yaml  ab-conservation-violation-forged.yaml  ab-cortisol-saturation-forged.yaml  ab-coupling-imbalance-forged.yaml  ab-dopamine-spike-forged.yaml  ab-frequency-zero-forged.yaml  ab-hormone-out-of-range-forged.yaml  ab-lipinski-mw-forged.yaml  ab-mass-negative-forged.yaml  ab-ti-narrow-forged.yaml  ab-valence-overflow-forged.yaml  ab-vmax-saturation-forged.yaml  abstract-pv-relevance-forged.yaml  action-irreversibility-gate-forged.yaml  adverse-reaction-extractor-forged.yaml  age-hepatic-adjustment-forged.yaml  age-lactation-safety-forged.yaml  age-pediatric-dose-forged.yaml  age-pregnancy-category-forged.yaml  age-renal-adjustment-forged.yaml  alert-config-validator-forged.yaml  algo-bias-triage-forged.yaml  algo-converge-signal-forged.yaml  algo-energy-measure-forged.yaml  algo-seal-commitment-forged.yaml  algo-select-triage-forged.yaml  algo-validation-to-assessment-bridge-forged.yaml  algo-void-scan-forged.yaml  alias-mismatch-detector-forged.yaml  audit-query-router-forged.yaml  autopilot-pharma-sweep-forged.yaml  benefit-risk-gate-forged.yaml  benefit-risk-ratio-forged.yaml  bone-safety-classifier-forged.yaml  boundary-threader-forged.yaml  bridge-benefit-risk-to-preemptive-forged.yaml  bridge-calculation-to-vigilance-forged.yaml  bridge-harm-to-who-umc-forged.yaml  bridge-vigilance-to-benefit-risk-forged.yaml  bridge-who-umc-to-regulatory-forged.yaml  (+644 more)
rsk/heligrams/chains/: dual-signal-helix.yaml
rsk/micrograms/: _TEMPLATE.microgram.yaml  ab-charge-imbalance.yaml  ab-conservation-violation.yaml  ab-cortisol-saturation.yaml  ab-coupling-imbalance.yaml  ab-dopamine-spike.yaml  ab-force-without-mass.yaml  ab-frequency-zero.yaml  ab-hormone-out-of-range.yaml  ab-lipinski-mw.yaml  ab-mass-negative.yaml  ab-ti-narrow.yaml  ab-valence-overflow.yaml  ab-vmax-saturation.yaml  abstract-pv-relevance.yaml  action-irreversibility-gate.yaml  actuator-load-classifier.yaml  additional-monitoring-flag.yaml  adme-pipeline-health.yaml  adverse-reaction-extractor.yaml  age-adolescent.yaml  age-adult.yaml  age-child.yaml  age-elderly.yaml  age-geriatric.yaml  age-hepatic-adjustment.yaml  age-infant.yaml  age-lactation-safety.yaml  age-neonate.yaml  age-pediatric-dose.yaml  age-pregnancy-category.yaml  age-renal-adjustment.yaml  agent-molt-classifier.yaml  aggregate-to-psur.yaml  alert-config-validator.yaml  alert-threshold-router.yaml  algo-bias-triage.yaml  algo-converge-signal.yaml  algo-drift-classify.yaml  algo-energy-measure.yaml  (+985 more)
rsk/micrograms/academy/: benefit-risk-exercise.yaml  case-processing-exercise.yaml  causality-assessment-exercise.yaml  signal-detection-exercise.yaml
rsk/micrograms/dd/: dd-domain-scorer.yaml  dd-go-nogo-gate.yaml  dd-risk-multiplier.yaml
rsk/micrograms/dev/: api-breaking-change.yaml  async-complexity-gate.yaml  binary-size-gate.yaml  branch-staleness.yaml  build-time-gate.yaml  clippy-warning-gate.yaml  commit-message-quality.yaml  crate-size-gate.yaml  dependency-freshness.yaml  deploy-safety-gate.yaml  doc-density-gate.yaml  error-handling-ratio.yaml  feature-flag-cleanup.yaml  file-size-gate.yaml  hygiene-action.yaml  kcl-field-balance.yaml  kvl-loop-conservation.yaml  memory-usage-gate.yaml  migration-readiness.yaml  module-complexity-gate.yaml  pr-size-classifier.yaml  primitive-failure-classifier.yaml  release-readiness.yaml  reporting-velocity-governor.yaml  rsk-organ-signal.yaml  tech-debt-scorer.yaml  test-coverage-gate.yaml  unsafe-audit.yaml
rsk/micrograms/flywheel/: action-router.yaml  actuator-balance.yaml  annotation-coverage.yaml  (+90 more)
rsk/processes/: bradford-hill-assessment.yaml  bradford-hill-multi-criterion.yaml  compliance-gate.yaml  full-compliance.yaml  governed-momentum.yaml  pv-signal-detection.yaml  signal-enriched-compliance.yaml
rsk/schemas/: microgram-plus-plus.schema.json  sop-catalog.json
rsk/src/: lib.rs  main.rs
rsk/tests/: decision_engine_tests.rs  e2e_runtime.rs  integration_tests.rs  is_prime_migration_test.rs  smart_goal_migration_test.rs  strategy_engine_integration_test.rs  test_pyo3_integration.py  verify_bridge.py
(+597 files in other folders)
